// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item (default props) => renders correctly 1`] = `
<Image
  source={undefined}
  style={
    Object {
      "height": 16,
      "margin": 4,
      "width": 16,
    }
  }
/>
`;

exports[`Item (with fill) => renders correctly 1`] = `
<Image
  source={undefined}
  style={
    Object {
      "height": 16,
      "margin": 4,
      "width": 16,
    }
  }
/>
`;

exports[`Item (with name and fill) => renders correctly 1`] = `
<Image
  source={1}
  style={
    Object {
      "height": 16,
      "margin": 4,
      "width": 16,
    }
  }
/>
`;

exports[`Item (with name) => renders correctly 1`] = `
<Image
  source={1}
  style={
    Object {
      "height": 16,
      "margin": 4,
      "width": 16,
    }
  }
/>
`;
